commitMessage : Nodetool tablehistograms to print statics for all the tables