@@ -33,18 +33,13 @@ import javax.annotation.Nullable;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
 import com.google.common.base.Strings;
-import com.google.common.util.concurrent.Uninterruptibles;
+
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import com.fasterxml.jackson.core.JsonFactory;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.apache.cassandra.auth.AllowAllNetworkAuthorizer;
-import org.apache.cassandra.audit.IAuditLogger;
 import org.apache.cassandra.auth.IAuthenticator;
 import org.apache.cassandra.auth.IAuthorizer;
-import org.apache.cassandra.auth.INetworkAuthorizer;
 import org.apache.cassandra.auth.IRoleManager;
 import org.apache.cassandra.config.DatabaseDescriptor;
 import org.apache.cassandra.db.DecoratedKey;
@@ -63,18 +58,16 @@ import org.apache.cassandra.io.sstable.metadata.ValidationMetadata;
 import org.apache.cassandra.io.util.DataOutputBuffer;
 import org.apache.cassandra.io.util.DataOutputBufferFixed;
 import org.apache.cassandra.io.util.FileUtils;
-import org.apache.cassandra.locator.InetAddressAndPort;
 import org.apache.cassandra.net.AsyncOneResponse;
 
-
+import org.codehaus.jackson.JsonFactory;
+import org.codehaus.jackson.map.ObjectMapper;
 
 public class FBUtilities
 {
     private static final Logger logger = LoggerFactory.getLogger(FBUtilities.class);
 
     private static final ObjectMapper jsonMapper = new ObjectMapper(new JsonFactory());
-
-    public static final String UNKNOWN_RELEASE_VERSION = "Unknown";
 
     public static final BigInteger TWO = new BigInteger("2");
     private static final String DEFAULT_TRIGGER_DIR = "triggers";
@@ -85,10 +78,7 @@ public class FBUtilities
 
     private static volatile InetAddress localInetAddress;
     private static volatile InetAddress broadcastInetAddress;
-    private static volatile InetAddress broadcastNativeAddress;
-    private static volatile InetAddressAndPort broadcastNativeAddressAndPort;
-    private static volatile InetAddressAndPort broadcastInetAddressAndPort;
-    private static volatile InetAddressAndPort localInetAddressAndPort;
+    private static volatile InetAddress broadcastRpcAddress;
 
     public static int getAvailableProcessors()
     {
@@ -102,10 +92,9 @@ public class FBUtilities
     public static final int MAX_UNSIGNED_SHORT = 0xFFFF;
 
     /**
-     * Please use getJustBroadcastAddress instead. You need this only when you have to listen/connect. It's also missing
-     * the port you should be using. 99% of code doesn't want this.
+     * Please use getBroadcastAddress instead. You need this only when you have to listen/connect.
      */
-    public static InetAddress getJustLocalAddress()
+    public static InetAddress getLocalAddress()
     {
         if (localInetAddress == null)
             try
@@ -121,44 +110,13 @@ public class FBUtilities
         return localInetAddress;
     }
 
-    /**
-     * The address and port to listen on for intra-cluster storage traffic (not client). Use this to get the correct
-     * stuff to listen on for intra-cluster communication.
-     */
-    public static InetAddressAndPort getLocalAddressAndPort()
-    {
-        if (localInetAddressAndPort == null)
-        {
-            localInetAddressAndPort = InetAddressAndPort.getByAddress(getJustLocalAddress());
-        }
-        return localInetAddressAndPort;
-    }
-
-    /**
-     * Retrieve just the broadcast address but not the port. This is almost always the wrong thing to be using because
-     * it's ambiguous since you need the address and port to identify a node. You want getBroadcastAddressAndPort
-     */
-    public static InetAddress getJustBroadcastAddress()
+    public static InetAddress getBroadcastAddress()
     {
         if (broadcastInetAddress == null)
             broadcastInetAddress = DatabaseDescriptor.getBroadcastAddress() == null
-                                 ? getJustLocalAddress()
+                                 ? getLocalAddress()
                                  : DatabaseDescriptor.getBroadcastAddress();
         return broadcastInetAddress;
-    }
-
-    /**
-     * Get the broadcast address and port for intra-cluster storage traffic. This the address to advertise that uniquely
-     * identifies the node and is reachable from everywhere. This is the one you want unless you are trying to connect
-     * to the local address specifically.
-     */
-    public static InetAddressAndPort getBroadcastAddressAndPort()
-    {
-        if (broadcastInetAddressAndPort == null)
-        {
-            broadcastInetAddressAndPort = InetAddressAndPort.getByAddress(getJustBroadcastAddress());
-        }
-        return broadcastInetAddressAndPort;
     }
 
     /**
@@ -167,41 +125,34 @@ public class FBUtilities
     public static void setBroadcastInetAddress(InetAddress addr)
     {
         broadcastInetAddress = addr;
-        broadcastInetAddressAndPort = InetAddressAndPort.getByAddress(broadcastInetAddress);
     }
 
-    /**
-     * <b>THIS IS FOR TESTING ONLY!!</b>
-     */
-    public static void setBroadcastInetAddressAndPort(InetAddressAndPort addr)
+    public static InetAddress getBroadcastRpcAddress()
     {
-        broadcastInetAddress = addr.address;
-        broadcastInetAddressAndPort = addr;
-    }
-
-    /**
-     * This returns the address that is bound to for the native protocol for communicating with clients. This is ambiguous
-     * because it doesn't include the port and it's almost always the wrong thing to be using you want getBroadcastNativeAddressAndPort
-     */
-    public static InetAddress getJustBroadcastNativeAddress()
-    {
-        if (broadcastNativeAddress == null)
-            broadcastNativeAddress = DatabaseDescriptor.getBroadcastRpcAddress() == null
+        if (broadcastRpcAddress == null)
+            broadcastRpcAddress = DatabaseDescriptor.getBroadcastRpcAddress() == null
                                    ? DatabaseDescriptor.getRpcAddress()
                                    : DatabaseDescriptor.getBroadcastRpcAddress();
-        return broadcastNativeAddress;
+        return broadcastRpcAddress;
     }
 
-    /**
-     * This returns the address that is bound to for the native protocol for communicating with clients. This is almost
-     * always what you need to identify a node and how to connect to it as a client.
-     */
-    public static InetAddressAndPort getBroadcastNativeAddressAndPort()
+    public static Collection<InetAddress> getAllLocalAddresses()
     {
-        if (broadcastNativeAddressAndPort == null)
-            broadcastNativeAddressAndPort = InetAddressAndPort.getByAddressOverrideDefaults(getJustBroadcastNativeAddress(),
-                                                                                             DatabaseDescriptor.getNativeTransportPort());
-        return broadcastNativeAddressAndPort;
+        Set<InetAddress> localAddresses = new HashSet<InetAddress>();
+        try
+        {
+            Enumeration<NetworkInterface> nets = NetworkInterface.getNetworkInterfaces();
+            if (nets != null)
+            {
+                while (nets.hasMoreElements())
+                    localAddresses.addAll(Collections.list(nets.nextElement().getInetAddresses()));
+            }
+        }
+        catch (SocketException e)
+        {
+            throw new AssertionError(e);
+        }
+        return localAddresses;
     }
 
     public static String getNetworkInterface(InetAddress localAddress)
@@ -263,6 +214,30 @@ public class FBUtilities
     public static int compareUnsigned(byte[] bytes1, byte[] bytes2)
     {
         return compareUnsigned(bytes1, bytes2, 0, 0, bytes1.length, bytes2.length);
+    }
+
+    /**
+     * @return The bitwise XOR of the inputs. The output will be the same length as the
+     * longer input, but if either input is null, the output will be null.
+     */
+    public static byte[] xor(byte[] left, byte[] right)
+    {
+        if (left == null || right == null)
+            return null;
+        if (left.length > right.length)
+        {
+            byte[] swap = left;
+            left = right;
+            right = swap;
+        }
+
+        // left.length is now <= right.length
+        byte[] out = Arrays.copyOf(right, right.length);
+        for (int i = 0; i < left.length; i++)
+        {
+            out[i] = (byte)((left[i] & 0xFF) ^ (right[i] & 0xFF));
+        }
+        return out;
     }
 
     public static void sortSampledKeys(List<DecoratedKey> keys, Range<Token> range)
@@ -330,7 +305,7 @@ public class FBUtilities
         {
             if (in == null)
             {
-                return System.getProperty("cassandra.releaseVersion", UNKNOWN_RELEASE_VERSION);
+                return System.getProperty("cassandra.releaseVersion", "Unknown");
             }
             Properties props = new Properties();
             props.load(in);
@@ -342,16 +317,6 @@ public class FBUtilities
             logger.warn("Unable to load version.properties", e);
             return "debug version";
         }
-    }
-
-    public static String getReleaseVersionMajor()
-    {
-        String releaseVersion = FBUtilities.getReleaseVersionString();
-        if (FBUtilities.UNKNOWN_RELEASE_VERSION.equals(releaseVersion))
-        {
-            throw new AssertionError("Release version is unknown");
-        }
-        return releaseVersion.substring(0, releaseVersion.indexOf('.'));
     }
 
     public static long timestampMicros()
@@ -368,37 +333,28 @@ public class FBUtilities
 
     public static <T> List<T> waitOnFutures(Iterable<? extends Future<? extends T>> futures)
     {
-        return waitOnFutures(futures, -1, null);
+        return waitOnFutures(futures, -1);
     }
 
     /**
-     * Block for a collection of futures, with optional timeout.
+     * Block for a collection of futures, with an optional timeout for each future.
      *
      * @param futures
-     * @param timeout The number of units to wait in total. If this value is less than or equal to zero,
+     * @param ms The number of milliseconds to wait on each future. If this value is less than or equal to zero,
      *           no tiemout value will be passed to {@link Future#get()}.
-     * @param units The units of timeout.
      */
-    public static <T> List<T> waitOnFutures(Iterable<? extends Future<? extends T>> futures, long timeout, TimeUnit units)
+    public static <T> List<T> waitOnFutures(Iterable<? extends Future<? extends T>> futures, long ms)
     {
-        long endNanos = 0;
-        if (timeout > 0)
-            endNanos = System.nanoTime() + units.toNanos(timeout);
         List<T> results = new ArrayList<>();
         Throwable fail = null;
         for (Future<? extends T> f : futures)
         {
             try
             {
-                if (endNanos == 0)
-                {
+                if (ms <= 0)
                     results.add(f.get());
-                }
                 else
-                {
-                    long waitFor = Math.max(1, endNanos - System.nanoTime());
-                    results.add(f.get(waitFor, TimeUnit.NANOSECONDS));
-                }
+                    results.add(f.get(ms, TimeUnit.MILLISECONDS));
             }
             catch (Throwable t)
             {
@@ -425,41 +381,12 @@ public class FBUtilities
         }
     }
 
-    public static <T> Future<? extends T> waitOnFirstFuture(Iterable<? extends Future<? extends T>> futures)
+    public static void waitOnFutures(List<AsyncOneResponse> results, long ms) throws TimeoutException
     {
-        return waitOnFirstFuture(futures, 100);
+        for (AsyncOneResponse result : results)
+            result.get(ms, TimeUnit.MILLISECONDS);
     }
-    /**
-     * Only wait for the first future to finish from a list of futures. Will block until at least 1 future finishes.
-     * @param futures The futures to wait on
-     * @return future that completed.
-     */
-    public static <T> Future<? extends T> waitOnFirstFuture(Iterable<? extends Future<? extends T>> futures, long delay)
-    {
-        while (true)
-        {
-            for (Future<? extends T> f : futures)
-            {
-                if (f.isDone())
-                {
-                    try
-                    {
-                        f.get();
-                    }
-                    catch (InterruptedException e)
-                    {
-                        throw new AssertionError(e);
-                    }
-                    catch (ExecutionException e)
-                    {
-                        throw new RuntimeException(e);
-                    }
-                    return f;
-                }
-            }
-            Uninterruptibles.sleepUninterruptibly(delay, TimeUnit.MILLISECONDS);
-        }
-    }
+
     /**
      * Create a new instance of a partitioner defined in an SSTable Descriptor
      * @param desc Descriptor of an sstable
@@ -513,42 +440,6 @@ public class FBUtilities
         if (!className.contains("."))
             className = "org.apache.cassandra.auth." + className;
         return FBUtilities.construct(className, "role manager");
-    }
-
-    public static INetworkAuthorizer newNetworkAuthorizer(String className)
-    {
-        if (className == null)
-        {
-            return new AllowAllNetworkAuthorizer();
-        }
-        if (!className.contains("."))
-        {
-            className = "org.apache.cassandra.auth." + className;
-        }
-        return FBUtilities.construct(className, "network authorizer");
-    }
-    
-    public static IAuditLogger newAuditLogger(String className) throws ConfigurationException
-    {
-        if (!className.contains("."))
-            className = "org.apache.cassandra.audit." + className;
-        return FBUtilities.construct(className, "Audit logger");
-    }
-
-    public static boolean isAuditLoggerClassExists(String className)
-    {
-        if (!className.contains("."))
-            className = "org.apache.cassandra.audit." + className;
-
-        try
-        {
-            FBUtilities.classForName(className, "Audit logger");
-        }
-        catch (ConfigurationException e)
-        {
-            return false;
-        }
-        return true;
     }
 
     /**
@@ -889,7 +780,7 @@ public class FBUtilities
         return historyDir;
     }
 
-    public static void closeAll(Collection<? extends AutoCloseable> l) throws Exception
+    public static void closeAll(List<? extends AutoCloseable> l) throws Exception
     {
         Exception toThrow = null;
         for (AutoCloseable c : l)
@@ -947,33 +838,7 @@ public class FBUtilities
     public static void reset()
     {
         localInetAddress = null;
-        localInetAddressAndPort = null;
         broadcastInetAddress = null;
-        broadcastInetAddressAndPort = null;
-        broadcastNativeAddress = null;
-    }
-
-    /**
-     * Hack to prevent the ugly "illegal access" warnings in Java 11+ like the following.
-     */
-    public static void preventIllegalAccessWarnings()
-    {
-        // Example "annoying" trace:
-        //        WARNING: An illegal reflective access operation has occurred
-        //        WARNING: Illegal reflective access by io.netty.util.internal.ReflectionUtil (file:...)
-        //        WARNING: Please consider reporting this to the maintainers of io.netty.util.internal.ReflectionUtil
-        //        WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-        //        WARNING: All illegal access operations will be denied in a future release
-        try
-        {
-            Class<?> c = Class.forName("jdk.internal.module.IllegalAccessLogger");
-            Field f = c.getDeclaredField("logger");
-            f.setAccessible(true);
-            f.set(null, null);
-        }
-        catch (Exception e)
-        {
-            // ignore
-        }
+        broadcastRpcAddress = null;
     }
 }
